[package]
name = "command-line-apps-in-rust"
version = "0.1.0"
authors = ["Mario Monteiro <marioammonteiro@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
log = "0.4.0"
env_logger = "0.8.3"
serde = { version = "1.0.124", features = ["derive"] }
# non blocking Client
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
# blocking Client
# reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0.64"